--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
     <div class="mySlides1">
       <img src="file:///C:/Users/danie/Pictures/Mom's%20photos/IMG_9901.jpg" style="width:100%">
       <div class = "single-img-content2">
-        <a href = "gridimagesLandscape.html"class = "active"><h3> Landscape</h3></a>
+        <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
        
 </div>
     </div>
@@ -103,14 +103,14 @@
     <div class="mySlides1">
       <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9974.JPG" style="width:100%">
       <div class = "single-img-content2">
-      <a href = "gridimagesLandscape.html"class = "active"><h3> Landscape</h3></a>
+      <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
     </div>
 </div>
 
     <div class="mySlides1">
       <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9835.JPG" style="width:100%">
       <div class = "single-img-content2">
-      <a href = "gridimagesLandscape.html"class = "active"><h3> Landscape</h3></a>
+      <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
     </div>
 </div>
     <!-- Next and previous buttons -->
