--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -41,7 +41,7 @@
         <div class = 'photo-grid'>
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG1412Copy2.jpg">
+                    <img src="IMG1412Copy2.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_1486-2.jpg">
