--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides1">
-      <img src="file:///C:/Users/danie/Pictures/Mom's%20photos/IMG_9901.jpg" style="width:100%">
+      <img src="IMG9901.jpg" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
        
@@ -101,14 +101,14 @@
     </div>
   
     <div class="mySlides1">
-      <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9974.JPG" style="width:100%">
+      <img src="IMG9974.JPG" style="width:100%">
       <div class = "single-img-content2">
       <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
     </div>
 </div>
 
     <div class="mySlides1">
-      <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9835.JPG" style="width:100%">
+      <img src="IMG9835.JPG" style="width:100%">
       <div class = "single-img-content2">
       <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
     </div>
