--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides1">
-      <img src="/images/IMG9901.jpg" style="width:100%">
+      <img src="./images/IMG9901.jpg" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesLandscape.html"class = "active"><h3> Landscape</h3></a>
        
