--- a/portfolio.html
+++ b/portfolio.html
@@ -126,21 +126,21 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides2">
-      <img src="./images/IMG9949.JPG" style="width:100%">
+      <img src="./images/IMG9949.jpg" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesArchitecture.html"class = "active"><h3> Architecture</h3></a> 
     </div>
     </div>
 
     <div class="mySlides2">
-        <img src="./images/IMG9726-2.JPG" style="width:100%">
+        <img src="./images/IMG9726-2.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesArchitecture.html"class = "active"><h3> Architecture</h3></a> 
       </div>
       </div>
 
       <div class="mySlides2">
-        <img src="./images/IMG9987-Edit-2.JPG" style="width:100%">
+        <img src="./images/IMG9987-Edit-2.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesArchitecture.html"class = "active"><h3> Architecture</h3></a> 
       </div>
