--- a/portfolio.html
+++ b/portfolio.html
@@ -158,21 +158,21 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides3">
-      <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_8940.JPG" style="width:100%">
+      <img src="./images/IMG8940.JPG" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesPortrait.html"class = "active"><h3> Portrait</h3></a> 
     </div>
     </div>
 
     <div class="mySlides3">
-        <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0834-3.jpg" style="width:100%">
+        <img src="./images/IMG0834-3.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesPortrait.html"class = "active"><h3> Portrait</h3></a> 
       </div>
       </div>
 
       <div class="mySlides3">
-        <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9931.JPG" style="width:100%">
+        <img src="./images/IMG9931.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesPortrait.html"class = "active"><h3> Portrait</h3></a> 
       </div>
