--- a/portfolio.html
+++ b/portfolio.html
@@ -165,7 +165,7 @@
     </div>
 
     <div class="mySlides3">
-        <img src="./images/IMG0834-3.jpg" style="width:100%">
+        <img src="./images/IMG0834.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesPortrait.html"class = "active"><h3> Portrait</h3></a> 
       </div>
@@ -197,21 +197,21 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides4">
-      <img src="file:///C:/Users/danie/Pictures/Live/IMG_9795-2.jpg" style="width:100%">
+      <img src="./images/IMG9795-2.jpg" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesLive.html"class = "active"><h3> Live</h3></a> 
     </div>
     </div>
 
     <div class="mySlides4">
-        <img src="file:///C:/Users/danie/Pictures/Live/IMG_1105-2.jpg" style="width:100%">
+        <img src="./images/IMG1105-2.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesLive.html"class = "active"><h3> Live</h3></a> 
       </div>
       </div>
 
       <div class="mySlides4">
-        <img src="file:///C:/Users/danie/Pictures/Live/IMG_1669.jpg" style="width:100%">
+        <img src="./images/IMG1669.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesLive.html"class = "active"><h3> Live</h3></a> 
       </div>
@@ -228,21 +228,21 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides5">
-      <img src="file:///C:/Users/danie/Pictures/Event/IMG_2042.jpg" style="width:100%">
+      <img src="./images/IMG2042.jpg" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesEvent.html"class = "active"><h3>Event</h3></a> 
     </div>
     </div>
 
     <div class="mySlides5">
-        <img src="file:///C:/Users/danie/Pictures/Event/IMG_0939-2.jpg" style="width:100%">
+        <img src="./images/IMG0939-2.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesEvent.html"class = "active"><h3>Event</h3></a> 
       </div>
       </div>
 
       <div class="mySlides5">
-        <img src="file:///C:/Users/danie/Pictures/Event/IMG_1007%20-%20Copy.JPG" style="width:100%">
+        <img src="./images/IMG1007%20-%20Copy.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesEvent.html"class = "active"><h3>Event</h3></a> 
       </div>
@@ -260,21 +260,21 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides6">
-      <img src="file:///C:/Users/danie/Pictures/Abstract/IMG_9613-2.jpg" style="width:100%">
+      <img src="./images/IMG9613-2.jpg" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesAbstract.html"class = "active"><h3>Abstract</h3></a> 
     </div>
     </div>
 
     <div class="mySlides6">
-        <img src="file:///C:/Users/danie/Pictures/Abstract/IMG_0956.JPG" style="width:100%">
+        <img src="./images/IMG0956.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesAbstract.html"class = "active"><h3>Abstract</h3></a> 
       </div>
       </div>
 
       <div class="mySlides6">
-        <img src="file:///C:/Users/danie/Pictures/Abstract/IMG_1605-2.jpg" style="width:100%">
+        <img src="./images/IMG1605-2.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesAbstract.html"class = "active"><h3>Abstract</h3></a> 
       </div>
@@ -292,21 +292,21 @@
 
     <!-- Full-width images with number and caption text -->
     <div class="mySlides7">
-      <img src="file:///C:/Users/danie/Pictures/Product/IMG_9976.JPG" style="width:100%">
+      <img src="./images/IMG9976.JPG" style="width:100%">
       <div class = "single-img-content2">
         <a href = "gridImagesProduct.html"class = "active"><h3>Product</h3></a> 
     </div>
     </div>
 
     <div class="mySlides7">
-        <img src="file:///C:/Users/danie/Pictures/Product/IMG_8550.JPG" style="width:100%">
+        <img src="./images/IMG8550.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesProduct.html"class = "active"><h3>Product</h3></a> 
       </div>
       </div>
 
       <div class="mySlides7">
-        <img src="file:///C:/Users/danie/Pictures/Abstract/IMG_0073.JPG" style="width:100%">
+        <img src="./images/IMG0073.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesProduct.html"class = "active"><h3>Product</h3></a> 
       </div>
