--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,7 @@
       </div>
 
       <div class="mySlides5">
-        <img src="./images/IMG1007%20-%20Copy.JPG" style="width:100%">
+        <img src="./images/IMG1007.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesEvent.html"class = "active"><h3>Event</h3></a> 
       </div>
