--- a/portfolio.html
+++ b/portfolio.html
@@ -165,7 +165,7 @@
     </div>
 
     <div class="mySlides3">
-        <img src="./images/IMG0834.jpg" style="width:100%">
+        <img src="./images/IMG0834.JPG" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesPortrait.html"class = "active"><h3> Portrait</h3></a> 
       </div>
@@ -306,7 +306,7 @@
       </div>
 
       <div class="mySlides7">
-        <img src="./images/IMG0073.JPG" style="width:100%">
+        <img src='./images/IMG0073.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesProduct.html"class = "active"><h3>Product</h3></a> 
       </div>
