--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@
       </div>
 
       <div class="mySlides7">
-        <img src='./images/IMG0073.jpg" style="width:100%">
+        <img src="./images/IMG0073.jpg" style="width:100%">
         <div class = "single-img-content2">
           <a href = "gridImagesProduct.html"class = "active"><h3>Product</h3></a> 
       </div>
