--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -44,16 +44,16 @@
                     <img src="IMG1412Copy2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_1486-2.jpg">
+                    <img src="./land/IMG_1486-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9992-2.jpg">
+                    <img src="./land/IMG_9992-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Mom's%20photos/IMG_9901.jpg">
+                    <img src="./land/IMG9901.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_5773-2.jpg">
+                    <img src="./land/IMG_5773-2.jpg">
                 </div>
               
               
