--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -44,16 +44,16 @@
                     <img src="IMG1412Copy2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG_1486-2.jpg">
+                    <img src="IMG1486-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG_9992-2.jpg">
+                    <img src="IMG9992-2.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="IMG9901.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG_5773-2.jpg">
+                    <img src="IMG5773-2.jpg">
                 </div>
               
               
