--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -41,19 +41,19 @@
         <div class = 'photo-grid'>
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="IMG1412Copy2.jpg">
+                    <img src="./land/IMG1412Copy2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG1486-2.jpg">
+                    <img src="./land/IMG1486-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG9992-2.jpg">
+                    <img src="./land/IMG9992-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG9901.jpg">
+                    <img src="./land/IMG9901.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="IMG5773-2.jpg">
+                    <img src="./land/IMG5773-2.jpg">
                 </div>
               
               
