--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -62,19 +62,19 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9958%20-%20VERTICAL.JPG">
+                    <img src="./land/IMG9958%20-%20VERTICAL.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_0292.jpg">
+                    <img src="./land/IMG0292.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Product/IMG_0008-2.jpg">
+                    <img src="./land/IMG0008-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9835.JPG">
+                    <img src="./land/IMG9835.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_5777-2.jpg">
+                    <img src="./land/IMG5777-2.jpg">
                 </div>
               
 
