--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -82,28 +82,28 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_0283.jpg">
+                    <img src="./land/IMG0283.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9266.JPG">
+                    <img src="./land/IMG9266.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_2602.JPG">
+                    <img src="./land/IMG2602.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9989-2.jpg">
+                    <img src="./land/IMG9989-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_0169.jpg">
+                    <img src="./land/IMG0169.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9902.jpg">
+                    <img src="./land/IMG9902.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_5770-3.jpg">
+                    <img src="./land/IMG5770-3.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_5779-2.jpg">
+                    <img src="./land/IMG5779-2.jpg">
                 </div>
                 
                 
