--- a/gridImagesLandscape.html
+++ b/gridImagesLandscape.html
@@ -114,23 +114,23 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_1461-2.jpg">
+                    <img src="./land/IMG1461-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_9974.JPG">
+                    <img src="./land/IMG9974.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_2549.JPG">
+                    <img src="./land/IMG2549.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_2674.JPG">
+                    <img src="./land/IMG2674.JPG">
                 </div>
                 
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_2188-2.jpg">
+                    <img src="./land/IMG2188-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Landscape/IMG_5731-2.jpg">
+                    <img src="./land/IMG5731-2.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="">
