--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -42,53 +42,53 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9966-3.jpg">
+                    <img src="./arch/IMG9966-3.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_2013.JPG">
+                    <img src="./arch/IMG2013.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_0078-2.jpg">
+                    <img src="./arch/IMG0078-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_1006.JPG">
+                    <img src="./arch/IMG1006.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_0176-2.jpg">
+                    <img src="./arch/IMG0176-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_1374.JPG">
+                    <img src="./arch/IMG1374.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_1998-2.jpg
+                    <img src="./arch/IMG1998-2.jpg
                     ">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9905.JPG">
+                    <img src="./arch/IMG9905.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9933.jpg">
+                    <img src="./arch/IMG9933.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_1524-2.jpg">
+                    <img src="./arch/IMG1524-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_5810-2.jpg">
+                    <img src="./arch/IMG5810-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_5797-2.jpg">
+                    <img src="./arch/IMG5797-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_0963.JPG">
+                    <img src="./arch/IMG0963.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_5807-2.jpg">
+                    <img src="./arch/IMG5807-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9940.jpg">
+                    <img src="./arch/IMG9940.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9938.jpg">
+                    <img src="./arch/IMG9938.jpg">
                 </div>
 
                 
