--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -108,38 +108,38 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9943.jpg">
+                    <img src="./arch/IMG9943.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9946.jpg">
+                    <img src="./arch/IMG9946.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9873.jpg">
+                    <img src="./arch/IMG9873.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_0964.JPG">
+                    <img src="./arch/IMG0964.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="  file:///C:/Users/danie/Pictures/Architecture/IMG_1327-2.jpg">
+                    <img src="./arch/IMG1327-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9910%20-%20Copy.JPG
+                    <img src="./arch/IMG_9910.JPG
                     ">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_5806-2.jpg">
+                    <img src="./arch/IMG5806-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_5790-2.jpg">
+                    <img src="./arch/IMG5790-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9975-2.jpg">
+                    <img src="./arch/IMG9975-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9920-2.jpg">
+                    <img src="./arch/IMG9920-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9949.jpg">
+                    <img src="./arch/IMG9949.jpg">
                 </div>
                
 
