--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -123,7 +123,7 @@
                     <img src="./arch/IMG1327-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="./arch/IMG_9910.JPG
+                    <img src="./arch/IMG9910.JPG
                     ">
                 </div>
                 <div class = 'photo1'>
