--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -149,37 +149,37 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9941.jpg">
+                    <img src="./arch/IMG9941.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9938%20-%20Copy.JPG">
+                    <img src="./arch/IMG9938.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_1356-2.jpg">
+                    <img src="./arch/IMG1356-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_1280.jpg">
+                    <img src="./arch/IMG1280.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9911%20-%20Copy.JPG">
+                    <img src="./arch/IMG9911-Copy.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9924.JPG">
+                    <img src="./arch/IMG9924.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_5803-2.jpg">
+                    <img src="./arch/IMG5803-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9759-2.jpg">
+                    <img src="./arch/IMG9759-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_0024-2.jpg">
+                    <img src="./arch/IMG0024-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9987-Edit-2.jpg">
+                    <img src="./arch/IMG9987-Edit-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Architecture/IMG_9726-2.jpg">
+                    <img src="./arch/IMG9726-2.jpg">
                 </div>
             </div>
 
