--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -123,8 +123,7 @@
                     <img src="./arch/IMG1327-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="./arch/IMG9910.JPG
-                    ">
+                    <img src="./arch/IMG9910.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="./arch/IMG5806-2.jpg">
