--- a/gridImagesArchitecture.html
+++ b/gridImagesArchitecture.html
@@ -151,7 +151,7 @@
                     <img src="./arch/IMG9941.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="./arch/IMG9938.JPG">
+                    <img src="./arch/IMG9938.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="./arch/IMG1356-2.jpg">
@@ -160,7 +160,7 @@
                     <img src="./arch/IMG1280.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="./arch/IMG9911-Copy.JPG">
+                    <img src="./arch/IMG9911 - Copy.JPG">
                 </div>
                 <div class = 'photo1'>
                     <img src="./arch/IMG9924.JPG">
