--- a/gridImagesPortrait.html
+++ b/gridImagesPortrait.html
@@ -41,28 +41,28 @@
         <div class = 'photo-grid'>
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/portrait%25202.jpg">
+                    <img src="./port/portrait%25202.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/51BD5F6B-65A2-47D5-8313-D679FA30C580.jpg">
+                    <img src="./port/51BD5F6B-65A2-47D5-8313-D679FA30C580.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0827-2.jpg">
+                    <img src="./port/IMG0827-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0829%202.jpg">
+                    <img src="./port/IMG0829%202.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9251.JPG">
+                    <img src="./port/IMG9251.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9363.JPG">
+                    <img src="./port/IMG9363.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9764.JPG">
+                    <img src="./port/IMG9764.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9771.JPG">
+                    <img src="./port/IMG9771.JPG">
                 </div>
                
                 
