--- a/gridImagesPortrait.html
+++ b/gridImagesPortrait.html
@@ -72,19 +72,16 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_8940.JPG">
+                    <img src="./port/IMG8940.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/portrait%25201.jpg">
+                    <img src="./port/portrait%25201.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0742.JPG">
+                    <img src="./port/IMG0742.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9931.JPG">
-                </div>
-                <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9949.JPG">
+                    <img src="./port/IMG9949.JPG">
                 </div>
                 
             </div>
