--- a/gridImagesPortrait.html
+++ b/gridImagesPortrait.html
@@ -88,28 +88,28 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0076.jpg">
+                    <img src="./port/IMG0076.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1579.jpg">
+                    <img src="./port/IMG1579.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1665.jpg">
+                    <img src="./port/IMG1665.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1590-2.jpg">
+                    <img src="./port/IMG1590-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9340.JPG">
+                    <img src="./port/IMG9340.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9399.JPG">
+                    <img src="./port/IMG9399.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_9772.JPG">
+                    <img src="./port/IMG9772.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0987.jpg">
+                    <img src="./port/IMG0987.jpg">
                 </div>
                 
             </div>
