--- a/gridImagesPortrait.html
+++ b/gridImagesPortrait.html
@@ -116,19 +116,19 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_0834-3.jpg">
+                    <img src="./port/IMG0834-3.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1490-2.jpg">
+                    <img src="./port/IMG1490-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1657%20-%20Copy.JPG">
+                    <img src="./port/IMG1657%20-%20Copy.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1641.jpg">
+                    <img src="./port/IMG1641.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Portrait/IMG_1592.JPG">
+                    <img src="./port/IMG1592.JPG">
                 </div>
                 
 
