--- a/gridImagesPortrait.html
+++ b/gridImagesPortrait.html
@@ -122,7 +122,7 @@
                     <img src="./port/IMG1490-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="./port/IMG1657%20-%20Copy.JPG">
+                    <img src="./port/IMG1657.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="./port/IMG1641.jpg">
