--- a/gridImagesLive.html
+++ b/gridImagesLive.html
@@ -41,38 +41,38 @@
         <div class = 'photo-grid'>
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_9995-2.jpg">
+                    <img src="./live/IMG9995-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_9863-2.jpg">
+                    <img src="./live/IMG9863-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_9803-2.jpg">
+                    <img src="./live/IMG9803-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1546.JPG
+                    <img src="/live/IMG1546.JPG
                     ">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1731.JPG">
+                    <img src="./live/IMG1731.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1221.JPG">
+                    <img src="./live/IMG1221.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1159.JPG">
+                    <img src="./live/IMG1159.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_0937-2.jpg">
+                    <img src="./live/IMG0937-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_0942-2.jpg">
+                    <img src="./live/IMG0942-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_0089.JPG">
+                    <img src="./live/IMG0089.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src=" file:///C:/Users/danie/Pictures/Live/IMG_0766.JPG">
+                    <img src="./live/IMG0766.JPG">
                 </div>
                 
                
