--- a/gridImagesLive.html
+++ b/gridImagesLive.html
@@ -81,25 +81,25 @@
 
             <div class = 'column'>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_9795-2.jpg">
+                    <img src="./live/IMG9795-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_9623-2.jpg">
+                    <img src="./live/IMG9623-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_9920-2.jpg">
+                    <img src="./live/IMG9920-2.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1695.JPG">
+                    <img src="./live/IMG1695.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1674.jpg">
+                    <img src="./live/IMG1674.jpg">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1673.JPG">
+                    <img src="./live/IMG1673.JPG">
                 </div>
                 <div class = 'photo1'>
-                    <img src="file:///C:/Users/danie/Pictures/Live/IMG_1105-2.jpg">
+                    <img src="./live/IMG_1105-2.jpg">
                 </div>
                 <div class = 'photo1'>
                     <img src="">
